--- a/Finn/Views/MainView.axaml
+++ b/Finn/Views/MainView.axaml
@@ -429,18 +429,23 @@
 
 				<GridSplitter Name="PreviewSplitter" Grid.Column="2" Grid.Row="2" Background="Transparent" ResizeDirection="Columns" Width="5" IsEnabled="{Binding PreviewEmbeddedOpen}"/>
 
-				<Grid Grid.Row="6" Grid.Column="4" RowDefinitions="200,40,*" IsVisible="{Binding TimeSheetOpen}" Width="500">
+				<Grid Grid.Row="6" Grid.Column="4" RowDefinitions="250,40,*" IsVisible="{Binding TimeSheetOpen}" Width="500">
 
 					<Border Grid.Row="0" Margin="5"> 
 
-						<DataGrid Name="ProjectList" ItemsSource="{Binding Storage.General.TimeSheetProjects}" SelectedItem="{Binding CurrentTimeSheetProject}" CornerRadius="{Binding Storage.General.CornerRadius}" BorderBrush="{DynamicResource TextControlBorderBrush}" >
+						<DataGrid Name="ProjectList" ItemsSource="{Binding Storage.General.TimeProjects}" SelectedItem="{Binding CurrentTimeSheetProject}" CornerRadius="{Binding Storage.General.CornerRadius}" BorderBrush="{DynamicResource TextControlBorderBrush}" IsReadOnly="True" >
 							<DataGrid.Styles>
 								<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
 									<Setter Property="IsVisible" Value="false" />
 								</Style>
 							</DataGrid.Styles>
 							<DataGrid.Columns>
-								<DataGridTextColumn Binding="{Binding}" Header="Projects" Width="*" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding Project}" Header="Projects" Width="*" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding W1}" Header="W1" Width="SizeToHeader" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding W2}" Header="W2" Width="SizeToHeader" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding W3}" Header="W3" Width="SizeToHeader" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding W4}" Header="W4" Width="SizeToHeader" FontSize="14"/>
+								<DataGridTextColumn Binding="{Binding W5}" Header="W5" Width="SizeToHeader" FontSize="14"/>
 							</DataGrid.Columns>
 						</DataGrid>
 					</Border>
@@ -449,10 +454,15 @@
 					<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left">
 
 						<Border Grid.Row="2" Margin="5" CornerRadius="{Binding Storage.General.CornerRadius}" BorderBrush="{DynamicResource TextControlBorderBrush}" BorderThickness="{Binding Storage.General.Border}">
-							<TextBox Name="InputName" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="200" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="New Project"/>
+							<StackPanel Orientation="Horizontal" Spacing="5">
+								<TextBox Name="InputName" Text="{Binding CurrentTimeSheetProject.Project}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="160" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="New Project"/>
+								<TextBox Name="ProjectNr" Text="{Binding CurrentTimeSheetProject.ProjectNr}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="150" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="Project Nr"/>
+								<TextBox Name="Task" Text="{Binding CurrentTimeSheetProject.Task}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="90" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="Task"/>						
+							</StackPanel>
 						</Border>
 						
 						<Button Width="35" Click="NewTimeSheetProject">
+
 							<ic:SymbolIcon Symbol="Add" FontSize="18"/>
 						</Button>
 						<Button Width="35" Click="RemoveTimeSheetProject">
@@ -546,7 +556,13 @@
 					<Border Grid.Row="1" Margin="5">
 						<StackPanel Orientation="Horizontal" Spacing="5">
 							<ComboBox Width="65" Name="HoursCombo" ItemsSource="{Binding Hours}" SelectedItem="{Binding CurrentTimeSheet.Hours}"/>
-							<ComboBox Width="130" ItemsSource="{Binding Storage.General.TimeSheetProjects}" SelectedItem="{Binding CurrentTimeSheet.Project}"/>
+							<ComboBox Width="130" ItemsSource="{Binding Storage.General.TimeProjects}" SelectedValue="{Binding CurrentTimeSheet.Project}" SelectedValueBinding="{Binding Project}">						
+								<ComboBox.ItemTemplate>
+								  <DataTemplate>
+									<TextBlock Text="{Binding Project}"/>
+								  </DataTemplate>
+								</ComboBox.ItemTemplate>
+							</ComboBox>
 
 						<Button Width="30" Command="{Binding NewTimeSheet}">
 							<ic:SymbolIcon Symbol="Add" FontSize="18"/>
