--- a/Finn/Views/PreView.axaml
+++ b/Finn/Views/PreView.axaml
@@ -5,6 +5,7 @@
              xmlns:vm="clr-namespace:Finn.ViewModels"
 			 xmlns:mupdf="clr-namespace:MuPDFCore.MuPDFRenderer;assembly=MuPDFCore.MuPDFRenderer"
 			 xmlns:ic="using:FluentIcons.Avalonia" 
+			 xmlns:icxt="using:FluentIcons.Avalonia.MarkupExtensions" 
 			 xmlns:anim="clr-namespace:Avalonia.Animation;assembly=MuPDFCore.MuPDFRenderer"
 			 xmlns:converter="clr-namespace:Finn.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -34,11 +35,23 @@
 
 					<mupdf:PDFRenderer Name="MuPDFRenderer" Grid.Column="0" Background="Transparent" PageBackground="White"
 				   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
-				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight"/>
+				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight">
+						<mupdf:PDFRenderer.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Copy" Icon="{icxt:SymbolIconExtension Symbol=Clipboard}" Command="{Binding PreviewVM.CopyToClipboard}" CommandParameter="{Binding $parent[Window]}"/>
+							</ContextMenu>
+						</mupdf:PDFRenderer.ContextMenu>
+					</mupdf:PDFRenderer>
 
 					<mupdf:PDFRenderer Name="MuPDFRendererSecondary" Grid.Column="2" Background="Transparent" PageBackground="White"
 				   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
-				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight" IsVisible="{Binding PreviewVM.TwopageMode}"/>
+				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight" IsVisible="{Binding PreviewVM.TwopageMode}">
+						<mupdf:PDFRenderer.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Copy" Icon="{icxt:SymbolIconExtension Symbol=Clipboard}" Command="{Binding PreviewVM.CopyToClipboard}" CommandParameter="{Binding $parent[Window]}"/>
+							</ContextMenu>
+						</mupdf:PDFRenderer.ContextMenu>
+					</mupdf:PDFRenderer>
 
 				</Grid>
 			</LayoutTransformControl>
@@ -110,10 +123,6 @@
 
 			<Button ToolTip.Tip="Next Page, Right" HotKey="Right" FontWeight="Normal" ToolTip.Placement="Right" BorderThickness="0" Command="{Binding NextPage}" CommandParameter="false">
 				<ic:SymbolIcon Symbol="ArrowNext" IconVariant="Regular" FontSize="16"/>
-			</Button>
-
-			<Button ToolTip.Tip="Copy to clipboard, Ctrl+C" HotKey="Ctrl + C" FontWeight="Normal" ToolTip.Placement="Right" BorderThickness="0" Command="{Binding CopyToClipboard}" CommandParameter="{Binding $parent[Window]}">
-				<ic:SymbolIcon Symbol="Clipboard" IconVariant="Regular" FontSize="16"/>
 			</Button>
 
 			<Button ToolTip.Tip="Rotate Page, counter clockwise" FontWeight="Normal" ToolTip.Placement="Right" BorderThickness="0" Click="RotateLeft">
