--- a/Finn/Dialogs/xNewDia.axaml
+++ b/Finn/Dialogs/xNewDia.axaml
@@ -25,13 +25,13 @@
 					<Label Content="New Project" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 				</StackPanel>
 				<Grid ColumnDefinitions="100,160" RowDefinitions="35,35,35" HorizontalAlignment="Center">
-					<Label Grid.Row="0" Grid.Column="0" Content="Name" VerticalAlignment="Center"/>
+					<Label Grid.Row="2" Grid.Column="0" Content="Name" VerticalAlignment="Center"/>
 					<Label Grid.Row="1" Grid.Column="0" Content="Group" VerticalAlignment="Center"/>
-					<Label Grid.Row="2" Grid.Column="0" Content="Category" VerticalAlignment="Center"/>
+					<Label Grid.Row="0" Grid.Column="0" Content="Category" VerticalAlignment="Center"/>
 
-					<TextBox Grid.Row="0" Grid.Column="1" Name="ProjectName" Width="160" VerticalAlignment="Center"/>
+					<TextBox Grid.Row="2" Grid.Column="1" Name="ProjectName" Width="160" VerticalAlignment="Center"/>
 					<TextBox Grid.Row="1" Grid.Column="1" Name="ProjectGroup"  Width="160" VerticalAlignment="Center"/>
-					<ComboBox Grid.Row="2" Grid.Column="1" Name="ProjectCategory" Width="160" VerticalAlignment="Center">
+					<ComboBox Grid.Row="0" Grid.Column="1" Name="ProjectCategory" Width="160" VerticalAlignment="Center" SelectedIndex="2">
 						<ComboBoxItem Content="Archive"/>
 						<ComboBoxItem Content="Library"/>
 						<ComboBoxItem Content="Project"/>
