--- a/Finn/Dialogs/xFoldersDia.axaml
+++ b/Finn/Dialogs/xFoldersDia.axaml
@@ -3,10 +3,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="200"
-		MinWidth="1300"
+		MinWidth="980"
 		MinHeight="370"
-		MaxWidth="1300"
+		MaxWidth="980"
 		MaxHeight="370"
+		xmlns:icxt="using:FluentIcons.Avalonia.MarkupExtensions"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xFoldersDia"
         Title="Folders"
@@ -24,30 +25,33 @@
 					<ic:SymbolIcon Symbol="Folder" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
 					<Label Content="Folders" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 				</StackPanel>
-				<Grid RowDefinitions="35,200" HorizontalAlignment="Center" Width="1270">
-					<StackPanel Grid.Row="0" Orientation="Horizontal" Spacing="5">
+				<Grid RowDefinitions="200,40" HorizontalAlignment="Center" Width="970">
+					<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5">
 						<TextBox Height="30" Width="135" Watermark="Name" Text="{Binding CurrentFolder.Name}"/>
-						<TextBox Height="30" Width="955" Watermark="Path" Text="{Binding CurrentFolder.Path}"/>
-						<ComboBox Height="30" Width="100" SelectedItem="{Binding CurrentFolder.Filetype}" ItemsSource="{Binding CurrentProject.Filetypes}"/>
-						<Button Width="30" Command="{Binding NewFolder}">
-							<ic:SymbolIcon Symbol="Add" FontSize="18"/>
-						</Button>
-						<Button Width="30" Command="{Binding RemoveFolder}">
-							<ic:SymbolIcon Symbol="Delete" FontSize="18"/>
-						</Button>
+						<TextBox Height="30" Width="710" Watermark="Path" Text="{Binding CurrentFolder.Path}"/>
+						<ComboBox Height="30" MinHeight="30" VerticalAlignment="Center" Width="115" SelectedItem="{Binding CurrentFolder.Filetype}" ItemsSource="{Binding CurrentProject.Filetypes}"/>
 					</StackPanel>
-					<DataGrid Grid.Row="1" ItemsSource="{Binding CurrentFile.AppendedFolders}" SelectedItem="{Binding CurrentFolder}" CornerRadius="{Binding Storage.General.CornerRadius}" SelectionMode="Single" IsReadOnly="True">
+					<DataGrid Name="FolderGrid" Grid.Row="0" ItemsSource="{Binding CurrentFile.AppendedFolders}" SelectedItem="{Binding CurrentFolder}" CornerRadius="{Binding Storage.General.CornerRadius}" 
+								SelectionMode="Single" IsReadOnly="True" DragDrop.AllowDrop="True">
 
 						<DataGrid.Columns>
-							<DataGridTextColumn Binding="{Binding NameWithAttributes}" Header="Name" Width="140" FontSize="{Binding Storage.General.FontSize}"/>
-							<DataGridTextColumn Binding="{Binding Path}" Header="Path" Width="*" FontSize="{Binding Storage.General.FontSize}"/>
-							<DataGridTextColumn Binding="{Binding Filetype}" Header="Type" Width="120" FontSize="{Binding Storage.General.FontSize}"/>
+							<DataGridTextColumn Binding="{Binding NameWithAttributes}" Header="Name" Width="140" FontSize="14"/>
+							<DataGridTextColumn Binding="{Binding Path}" Header="Path" Width="*" FontSize="14" FontStyle="Italic"/>
+							<DataGridTextColumn Binding="{Binding Filetype}" Header="Type" Width="120" FontSize="14"/>
 						</DataGrid.Columns>
 						<DataGrid.Styles>
 							<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
 								<Setter Property="IsVisible" Value="false" />
 							</Style>
 						</DataGrid.Styles>
+
+						<DataGrid.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="New" Command="{Binding NewFolder}" Icon="{icxt:SymbolIconExtension Symbol=Add}"/>
+								<MenuItem Header="Delete" Command="{Binding RemoveFolder}" Icon="{icxt:SymbolIconExtension Symbol=Delete}"/>	
+							</ContextMenu>
+						</DataGrid.ContextMenu>
+
 					</DataGrid>
 				</Grid>
 
